# zed

./: CODE_OF_CONDUCT.md  Cargo.toml  typos.toml
.github/workflows/: ci.yml
crates/copilot/src/: copilot_chat.rs
crates/editor/src/: display_map.rs  editor.rs  element.rs  items.rs  mouse_context_menu.rs  movement.rs
crates/editor/src/display_map/: block_map.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs
crates/gpui/src/: element.rs  key_dispatch.rs  platform.rs  window.rs
crates/gpui/src/elements/: img.rs
crates/gpui/src/platform/linux/: platform.rs
crates/gpui/src/platform/mac/: platform.rs
crates/inline_completion_button/src/: inline_completion_button.rs
crates/language/src/: buffer.rs  language_settings.rs
crates/multi_buffer/src/: multi_buffer.rs
crates/remote/: Cargo.toml
crates/remote/src/: ssh_session.rs
crates/smol_windows_uds/: Cargo.toml
crates/smol_windows_uds/src/: smol_windows_uds.rs
