[package]
name = "smol_windows_uds"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/smol_windows_uds.rs"
doctest = false

[dependencies]
futures.workspace = true
uds_windows.workspace = true
smol.workspace = true
futures-lite.workspace = true
async-io.workspace = true

[dev-dependencies]
tempfile.workspace = true
